# ASCII_Art

./: .gitignore  CMakeLists.txt  README.md  build.bash  main.cpp  output.json  run.bash
scripts/: flan.hpp  wordle.hpp
src/: main.cpp
